<resources>
    <string name="app_name">IntraMap</string>
    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
    <string name="about_title">

        ABOUT THE INTRAMUROS\n\n

    </string>
    <string name="about_base">

        Then.\n\n\n
        The site of Intramuros was originally a large and prosperous Malayan Muslim settlement named Maynilad. The name came from may nilad, nilad being a water plant whose star-shaped flowers clustered in abundance along the low-lying riverbanks. The strategic location of Maynilad, being on the Pasig River and the Manila Bay, made it an ideal location for the locals to trade crafts and produce with other peoples of then pre-Hispanic Philippines and other Asian countries, especially with Chinese merchants. Maynilad was also the seat of power for native chiefs that ruled the area before the Spaniards set foot on Philippine soil.

    </string>
    <string name="date_1565">
        Spanish Rule\n1565</string>
     <string name="date_1565_content">

        Miguel Lopez de Legaspi began to set foot on Maynilad. Legaspi and his men waged clashes with the natives before they were able to finally establish themselves in the area and have a peace agreement with the local leaders, who, in turn, turned over Maynilad to the Spanish. Citing the strategic economic, political and military importance of Manila, Legaspi promptly declared Manila as the capital of the then new Spanish colony of the Philippines on June 24, 1571. The King of Spain, delighted at the new conquest done by Legaspi and his men, awarded Manila a coat of arms and declared it Insigne y Siempre Leal Ciudad ("Distinguished and ever loyal city"). Planning in the City of Manila was first manifested in the Spanish period plan for Intramuros, which was based on King Philip II\'s Royal Ordinance issued on July 3, 1573 in San Lorenzo, Spain.  Intramuros served as the center of political, military and religious power of the Spaniards during the time that the Philippines was a colony of Spain. Inside Intramuros were Roman Catholic churches, like the Manila Cathedral and the San Agustin Church , and convents and church-run schools, which were usually being run by religious orders such as theDominicans, Augustinians and Franciscans; the Governor\'s Palace, the official residence of the Spanish governor-general to the Philippines before it was officially moved to Malacañang Palace. Malacanang Palace is the official residence of the president of the Philippines. The palace is located along the north bank of the Pasig River in Manila. It is called Palasyo ng Malakanyang in Filipino, and is depicted on the verso (back) side of the 20-; and Fort Santiago.. A defence fortress built by Miguel Lopez de Legaspi. Originally, it stoods the palisade of Rajah Soliman, chieftain of Maynilad. Located at the mouth of the Pasig River, it was once the primer defence fort of the Spanish Empire in the Philippines. It was, the main Spanish garrison in the archipelago where martyr Jose Rizal was once held by Spanish authorities. Only Spaniards were allowed inside Intramuros; the natives and Chinese residents were only limited by the Spanish authorities to live outside the walls of Intramuros.\n\n

     </string>
    <string name="date_1571">1571</string>
     <string name="date_1571_content">

       Citing the strategic economic, political and military importance of Manila, Legaspi promptly declared Manila as the capital of the then new Spanish colony of the Philippines. The King of Spain, delighted at the new conquest done by Legaspi and his men, awarded Manila a coat of arms and declared it Insigne y Siempre Leal Ciudad ("Distinguished and ever loyal city").\n\n

     </string>
    <string name="date_1573">1573</string>
     <string name="date_1573_content">

       Planning in the City of Manila was first manifested in the Spanish period plan for Intramuros, which was based on King Philip II\'s Royal Ordinance in San Lorenzo, Spain.  Intramuros served as the center of political, military and religious power of the Spaniards during the time that the Philippines was a colony of Spain. \n\n

     </string>
     <string name="date_1945">
        Wolrd War II\n1945</string>
     <string name="date_1945_content">

        Japanese soldiers who had occupied the islands, invaded the site of Intramuros, and killed many civilians and Filipino soldiers; destroying most of the original buildings constructed. Almost 100,000 people died during the liberation of Manila. Intramuros was in ruins after the war and the only structure that survived was the San Agustin and almost no other buildings remained standing.\n\n

     </string>
    <string name="lyc">Origin of the Name</string>
    <string name="lyc_content">

    With his admiration for knowledge and his appreciation of classical thought, Dr. Laurel named the school Lyceum of the Philippines after Lykeios, the site in ancient Athens where the great Philosopher Aristotle nurtured the minds of his protegees.

    </string>
    <string name="date_1920">1920</string>
    <string name="date_1920_content">

    The inspiration to establish a school came to him while a student at Yale. Three decades later, along with some of his close friends, he turned this dream into a reality.

    </string>
    <string name="date_1952">1952</string>
    <string name="date_1952_content">

   With the aim of becoming a center of academic excellence in the Philippines and the Far East, Lyceum of the Philippines University (as it is now known) formally opened its doors to the public.

    </string>
    <string name="date_1966">1966</string>
    <string name="date_1966_content">

    Laurel founded the Lyceum of the Philippines University-Batangas followed by Lyceum of the Philippines-Laguna in 2000. Both campuses are now headed by Senator Laurel’s fourth son Dr. Peter P. Laurel.

    </string>
    <string name="date_2008">2008</string>
    <string name="date_2008_content">

    Another campus in Cavite was established to bring the total number of LPU campuses to five with a grand total enrollment of approximately 37,000 students, about 15,000 of whom are enrolled in various hospitality courses. Senator Laurel’s eldest son, Atty. Roberto P. Laurel, heads the Manila, Makati and Cavite campuses.

    </string>
    <string name="date_1963">1963</string>
    <string name="date_1963_content">

    The remaining two annexes, the MacArthur and Victoria, were transferred to a three-storey building, located in General Luna Street. Intramuros/Victoria Annex became the home of the first Manila Science High School. Arrangements were made to transfer the Manila Science High School at Padre Faura Street corner Taft Avenue (former site of Araullo High School).

    </string>
    <string name="date_1951to1960">1951-1960</string>
    <string name="date_1951to1960_content">

    PLM conception started during the administration of Mayor Arsenio H. Lacson. The first elective mayor of the City of Manila he approved Ordinance No. 4202 The Municipal Board has allocated P1-Million to establish the University. The Board committee that spearheaded and allocated funds for the creation of the city university was chaired by then-Councilor Ernesto M. Maceda.

    </string>
    <string name="nat">Creation by National Legislation</string>
    <string name="dated_1964">1964</string>
    <string name="dated_1964_content">

    Mayor Villegas co-opted the aid of then-Congressman Justo R. Albert of the 4th congressional district of the City of Manila to sponsor a bill in the House of Representatives of the Congress of the Philippines seeking to create the city university. Filed as House Bill No. 8349 in the Lower House, the Senate version was spearheaded by Senators Gil Puyat and Camilo Osias.

    </string>
    <string name="date_1965">1965</string>
    <string name="date_1965_content">

    The consolidation of the two bills was tackled during the Fourth Session of the Fifth Congress which began and was held in the City of Manila. The consolidated bill was thereafter passed by the joint Congress with the House of Representatives finally passing while the Philippine Senate finally passed. The final bill was signed by Senate President Ferdinand E. Marcos and House Speaker Cornelio T. Villareal with Mr. Regino S. Eustaquio, Secretary of the Senate, and Mr. Inocencio B. Pareja, Secretary of the House of Representatives.

    </string>
    <string name="app">Presidential Approval of the Congressional Act</string>
    <string name="app_content">

    The final bill entitled "An Act Authorizing the City of Manila to Establish and Operate the University of the City of Manila and for Other Purposes" was signed into law by President Diosdado P. Macapacal in a signing ceremony in Malacañang Palace witnessed by Atty. Primitivo de Leon, Mayor Villegas, Congressman Ramon Mitra Jr., and its main sponsor in the House of Representatives, Congressman Albert. The law was captioned as Republic Act No. 4196 which now serves as the University Charter.

    </string>
    <string name="day">A Day of Double Significance</string>
    <string name="day_content">

    The birth of Pamantasan on a June 19 is made even more significant than ever by the fact that it was made to coincide with the birth of the Philippine national hero, Dr. Jose P. Rizal, who has a great aptitude for study, thereby earning several degrees and titles during his teen years with flying colors. Multi-talented as he was, Rizal concept of the importance of education is clearly enunciated in his work entitled Instruction.

    </string>
    <string name="sem">The Seminal Direction</string>
    <string name="date_1967">1967</string>
    <string name="date_1967_content">

    The University was so named Pamantasan ng Lungsod ng Maynila from the official English name by Mayor Villegas. The Board of Regents was formally formed in the same year as Mayor Villegas appointed its members. The university regents were sworn into office which eventually conducted its first official board meeting and the election of its officers at the Maharnilad.

    </string>
    <string name="date_1970">1970</string>
    <string name="date_1970_content">

    Then Executive Secretary Ernesto M. Maceda, by authority of then President Ferdinand Marcos, conveyed unto the City of Manila two (2) parcels of land owned by the Republic of the Philippines. Said real properties consist the area where PLM stands today.

    </string>
</resources>