<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="@dimen/_15sdp"
    android:scrollbarStyle="outsideInset"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyc_Layout">

            <TextView
                android:id="@+id/lyc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lyc"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <su.whs.watl.ui.MultiColumnTextViewEx
                android:text="@string/lyc_content"
                textPaddingLeft="5dp"
                textPaddingRight="5dp"
                textPaddingTop="5dp"
                textPaddingBottom="5dp"
                asyncReflow="false"
                columnCount="2"
                columnSpacing="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:id="@+id/lyc_content"/>

            <TextView
                android:id="@+id/date_1920"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_1920"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <su.whs.watl.ui.MultiColumnTextViewEx
                    android:text="@string/date_1920_content"
                    textPaddingLeft="5dp"
                    textPaddingRight="5dp"
                    textPaddingTop="5dp"
                    textPaddingBottom="5dp"
                    asyncReflow="false"
                    columnCount="2"
                    columnSpacing="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:id="@+id/date_1920_layout"/>

                <TextView
                    android:id="@+id/date_1952"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_1952"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <su.whs.watl.ui.MultiColumnTextViewEx
                        android:text="@string/date_1952_content"
                        textPaddingLeft="5dp"
                        textPaddingRight="5dp"
                        textPaddingTop="5dp"
                        textPaddingBottom="5dp"
                        asyncReflow="false"
                        columnCount="2"
                        columnSpacing="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:id="@+id/date_1952_layout"/>

                    <TextView
                        android:id="@+id/date_1966"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_1966"
                        android:layout_marginBottom="@dimen/_10sdp"/>


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <su.whs.watl.ui.MultiColumnTextViewEx
                            android:text="@string/date_1966_content"
                            textPaddingLeft="5dp"
                            textPaddingRight="5dp"
                            textPaddingTop="5dp"
                            textPaddingBottom="5dp"
                            asyncReflow="false"
                            columnCount="2"
                            columnSpacing="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:id="@+id/date__1966_layout"/>

                        <TextView
                            android:id="@+id/date_2008"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_2008"
                            android:layout_marginBottom="@dimen/_10sdp"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <su.whs.watl.ui.MultiColumnTextViewEx
                                android:text="@string/date_2008_content"
                                textPaddingLeft="5dp"
                                textPaddingRight="5dp"
                                textPaddingTop="5dp"
                                textPaddingBottom="5dp"
                                asyncReflow="false"
                                columnCount="2"
                                columnSpacing="15dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:id="@+id/date_2008_layout" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>