<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="@dimen/_15sdp"
    android:scrollbarStyle="outsideInset"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plm_Layout">

            <TextView
                android:id="@+id/date_1951to1960"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_1951to1960"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <su.whs.watl.ui.MultiColumnTextViewEx
                android:text="@string/date_1951to1960_content"
                textPaddingLeft="5dp"
                textPaddingRight="5dp"
                textPaddingTop="5dp"
                textPaddingBottom="5dp"
                asyncReflow="false"
                columnCount="2"
                columnSpacing="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:id="@+id/date_1951to1960_layout"/>

            <TextView
                android:id="@+id/date_1963"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_1963"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <su.whs.watl.ui.MultiColumnTextViewEx
                    android:text="@string/date_1963_content"
                    textPaddingLeft="5dp"
                    textPaddingRight="5dp"
                    textPaddingTop="5dp"
                    textPaddingBottom="5dp"
                    asyncReflow="false"
                    columnCount="2"
                    columnSpacing="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:id="@+id/date_1963_layout"/>

                <su.whs.watl.ui.MultiColumnTextViewEx
                    android:text="@string/nat"
                    textPaddingLeft="5dp"
                    textPaddingRight="5dp"
                    textPaddingTop="5dp"
                    textPaddingBottom="5dp"
                    asyncReflow="false"
                    columnCount="2"
                    columnSpacing="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/dated_1964"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dated_1964"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <su.whs.watl.ui.MultiColumnTextViewEx
                        android:text="@string/dated_1964_content"
                        textPaddingLeft="5dp"
                        textPaddingRight="5dp"
                        textPaddingTop="5dp"
                        textPaddingBottom="5dp"
                        asyncReflow="false"
                        columnCount="2"
                        columnSpacing="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:id="@+id/date_1964_layout"/>

                    <TextView
                        android:id="@+id/date_1965"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_1965"
                        android:layout_marginBottom="@dimen/_10sdp"/>


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <su.whs.watl.ui.MultiColumnTextViewEx
                            android:text="@string/date_1965_content"
                            textPaddingLeft="5dp"
                            textPaddingRight="5dp"
                            textPaddingTop="5dp"
                            textPaddingBottom="5dp"
                            asyncReflow="false"
                            columnCount="2"
                            columnSpacing="15dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:id="@+id/date_1965_layout"/>

                        <TextView
                            android:id="@+id/app"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app"
                            android:layout_marginBottom="@dimen/_10sdp"/>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                            <su.whs.watl.ui.MultiColumnTextViewEx
                                android:text="@string/app_content"
                                textPaddingLeft="5dp"
                                textPaddingRight="5dp"
                                textPaddingTop="5dp"
                                textPaddingBottom="5dp"
                                asyncReflow="false"
                                columnCount="2"
                                columnSpacing="15dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:id="@+id/app_layout"/>

                            <TextView
                                android:id="@+id/day"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/day"
                                android:layout_marginBottom="@dimen/_10sdp"/>

                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal">

                                <su.whs.watl.ui.MultiColumnTextViewEx
                                    android:text="@string/day_content"
                                    textPaddingLeft="5dp"
                                    textPaddingRight="5dp"
                                    textPaddingTop="5dp"
                                    textPaddingBottom="5dp"
                                    asyncReflow="false"
                                    columnCount="2"
                                    columnSpacing="15dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_10sdp"
                                    android:id="@+id/day_layout"/>

                                <su.whs.watl.ui.MultiColumnTextViewEx
                                    android:text="@string/sem"
                                    textPaddingLeft="5dp"
                                    textPaddingRight="5dp"
                                    textPaddingTop="5dp"
                                    textPaddingBottom="5dp"
                                    asyncReflow="false"
                                    columnCount="2"
                                    columnSpacing="15dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_10sdp"/>

                                <TextView
                                    android:id="@+id/date_1967"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/date_1967"
                                    android:layout_marginBottom="@dimen/_10sdp"/>

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal">

                                    <su.whs.watl.ui.MultiColumnTextViewEx
                                        android:text="@string/date_1967_content"
                                        textPaddingLeft="5dp"
                                        textPaddingRight="5dp"
                                        textPaddingTop="5dp"
                                        textPaddingBottom="5dp"
                                        asyncReflow="false"
                                        columnCount="2"
                                        columnSpacing="15dp"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="@dimen/_10sdp"
                                        android:id="@+id/date_1967_layout"/>

                                    <TextView
                                        android:id="@+id/date_date_1970"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/date_1970"
                                        android:layout_marginBottom="@dimen/_10sdp"/>

                                    <LinearLayout
                                        android:orientation="vertical"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_horizontal">

                                        <su.whs.watl.ui.MultiColumnTextViewEx
                                            android:text="@string/date_1970_content"
                                            textPaddingLeft="5dp"
                                            textPaddingRight="5dp"
                                            textPaddingTop="5dp"
                                            textPaddingBottom="5dp"
                                            asyncReflow="false"
                                            columnCount="2"
                                            columnSpacing="15dp"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="@dimen/_10sdp"
                                            android:id="@+id/date_1970_layout"/>

                                    </LinearLayout>

                                </LinearLayout>


                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>